Mobile overflow fix

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,7 +3,7 @@
 
 @include foundation-xy-grid-classes;
 
-body {
+.app {
   overflow-x: hidden;
 }
 
